better null handling in structuredListToJson / structuredMapToJson